sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:10: error: '(' expected but '{' found.
    else if {getCouleur(w)==Color.blue) {
            ^DutchFlagAlgo:20: error: illegal start of simple expression
  }
  ^